<resources>
    <string name="app_name">lyritic</string>
    <string name="sortName">Name</string>
    <string name="sortArtist">Interpret</string>
    <string name="sortDate">Datum</string>
    <string name="sortAlbum">Album</string>
    <string name="sortLength">Länge</string>
    <string name="browse">Browse</string>
    <string name="others">Others</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="absteigend">Absteigend</string>
    <string name="aufsteigend">Aufsteigend</string>
    <string name="sortAscending">Aufsteigend</string>
    <string name="sortDescending">Absteigend</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
