<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sortName"
            android:icon="@drawable/name"
            android:title="@string/sortName"
            app:actionViewClass="android.widget.ToggleButton"
            />

        <item
            android:id="@+id/sortArtist"
            android:title="@string/sortArtist"
            android:icon="@drawable/person"
            app:actionViewClass="android.widget.ToggleButton"
            />

        <item
            android:id="@+id/sortDate"
            android:title="@string/sortDate"
            android:icon="@drawable/date"
            app:actionViewClass="android.widget.ToggleButton"
            />

    </group>
    <group>
        <item
            android:id="@+id/sortAscending"
            android:title="@string/aufsteigend"
            android:icon="@drawable/album"
            app:actionViewClass="android.widget.ToggleButton"
            />

        <item
            android:id="@+id/sortDescending"
            android:title="@string/absteigend"
            android:icon="@drawable/length"
            app:actionViewClass="android.widget.ToggleButton"
            />
    </group>

</menu>